--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 
     <!-- ثيم التطبيق الرئيسي يعتمد على AppCompat Light -->
     <resources>
-    <style name="OneUITheme.DayNight" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- خصائص الثيم هنا -->
     </style>
 </resources>
