--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- ثيم التطبيق الرئيسي يعتمد على AppCompat Light -->
-    <resources>
+    <!-- ثيم التطبيق الرئيسي -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- خصائص الثيم هنا -->
-    </style>
-</resources>
         <!-- ألوان الثيم -->
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
@@ -14,5 +9,4 @@
         <!-- خلفية عامة للتطبيق -->
         <item name="android:windowBackground">@color/backgroundColor</item>
     </style>
-
 </resources>
