--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- الألوان الأساسية لـ One UI -->
-    <color name="primaryColor">#0381FE</color>       <!-- أزرق One UI الرئيسي4 -->
-    <color name="primaryDarkColor">#0072DE</color>   <!-- أزرق أغمق للخلفيات العلوية -->
-    <color name="accentColor">#3E91FF</color>        <!-- لون فرعي (على سبيل المثال) -->
-    <color name="textPrimary">#000000</color>        <!-- لون النص الأساسي -->
-    <color name="textSecondary">#666666</color>      <!-- لون النص الثانوي -->
-    <color name="backgroundColor">#F0F2F5</color>    <!-- خلفية محايدة فاتحة -->
+    <!-- One UI color palette -->
+    <color name="primaryColor">#0381FE</color>
+    <color name="primaryDarkColor">#0072DE</color>
+    <color name="accentColor">#3E91FF</color>
+    <color name="textPrimary">#000000</color>
+    <color name="textSecondary">#666666</color>
+    <color name="backgroundColor">#F0F2F5</color>
 </resources>
