--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- ثيم التطبيق الرئيسي (قديم/للـ AppCompat) -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/primaryColor</item>
-        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
-        <item name="colorAccent">@color/accentColor</item>
-        <item name="android:windowBackground">@color/backgroundColor</item>
-    </style>
-
-    <!-- ثيم DayNight مستخدم في المانيفست -->
-    <style name="OneUIThemeDayNight" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <!-- One UI Theme (MaterialComponents DayNight, NoActionBar) -->
+    <style name="OneUITheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
         <item name="colorSecondary">@color/accentColor</item>
         <item name="android:windowBackground">@color/backgroundColor</item>
-        <!-- أضف خصائص إضافية حسب الحاجة -->
+        <!-- Use primary text color by default -->
+        <item name="android:textColorPrimary">@color/textPrimary</item>
+        <item name="android:textColorSecondary">@color/textSecondary</item>
     </style>
 </resources>
