--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <!-- One UI Theme (MaterialComponents DayNight, NoActionBar) -->
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="OneUITheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
         <item name="colorSecondary">@color/accentColor</item>
         <item name="android:windowBackground">@color/backgroundColor</item>
-        <!-- Use primary text color by default -->
         <item name="android:textColorPrimary">@color/textPrimary</item>
         <item name="android:textColorSecondary">@color/textSecondary</item>
+        <item name="android:forceDarkAllowed">false</item>
     </style>
 </resources>
