--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,11 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nav_home"
-        android:icon="@android:drawable/ic_menu_view"
-        android:title="@string/home" />
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/settings" />
+    <item android:id="@+id/nav_home"   android:icon="@android:drawable/ic_menu_view" android:title="@string/home"/>
+    <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_preferences" android:title="@string/settings"/>
+    <item android:id="@+id/nav_scroll"   android:icon="@android:drawable/ic_menu_sort_by_size" android:title="@string/scroll_menu"/>
 </menu>
