--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,25 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:gravity="center"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp"
-    android:background="@color/backgroundColor">
+    android:gravity="center">
 
     <TextView
-        android:id="@+id/welcome_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/welcome_message"
-        android:textSize="24sp"
-        android:textColor="@color/textPrimary"
-        android:layout_marginBottom="20dp"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:text="@string/button_label"
-        android:background="@drawable/round_button"
-        android:textColor="@android:color/white"/>
-</LinearLayout>
+        android:text="@string/app_name"
+        android:textSize="24sp"/>
+</FrameLayout>
